# hft_playground

./: README.md
MemoryPool/: README.md  memory_pool  memory_pool.cpp
Projects/SPSC/version1/: README.md  spsc_mutex  spsc_mutex.cpp
Projects/SPSC/version2/: README.md  spsc_atomic  spsc_atomic.cpp
Projects/SPSC/version3/: README.md  alignas_spsc_atomic  (+1 more)
Projects/peer_download/: API_GUIDE.md  ARCHITECTURE.md  CMakeLists.txt  DESIGN.md  README.md  architecture.html  test_half_fetch.cpp
Projects/peer_download/core/: chunk_manager.cpp  chunk_manager.h  hasher.cpp  hasher.h  http_range_fetch.cpp  http_range_fetch.h  node.cpp  node.h  peer_discovery.cpp  peer_discovery.h  reassembler.cpp  reassembler.h
Projects/peer_download/desktop-test-harness/: coordinator.cpp  peer_node.cpp
Projects/peer_download/tests/: test_hasher.cpp
atomic/: README.md  benchmark  src.cpp
atomicity/: README.md  plain_vs_mutex  plain_vs_mutex.cpp
branch_prediction/: README.md  branch_prediction  branch_prediction.cpp
false_sharing/: README.md  alignas  alignas.cpp
fetch_add/: benchmark  src.cpp
list_vs_vector/: README.md  list_vs_vector  list_vs_vector.cpp
memory_acquire_release/: src.cpp
memory_mapped_files/: README.md  mmap.cpp  mmap_traditional  mmap_vs_traditional.cpp
memory_ordering/: README.md  with_memory_ordering  with_memory_ordering.cpp  without_mem_ordering  without_mem_ordering.cpp
memory_relaxed/: benchmark  src.cpp
memory_sequential/: benchmark  src.cpp
mutex/: README.md  benchmark  src.cpp
mutex_comparison/: benchmark  src.cpp
mutex_vs_atomic/: README.md  mutex_vs_atomic  mutex_vs_atomic.cpp
normal_vs_atomic/: benchmark  src.cpp
performance_comparison/: README.md  benchmark  performance_comparison.cpp
release_and_acquire/: benchmark  src.cpp
spsc_queue/: README.md  spsc_queue  spsc_queue.cpp
types_of_memory_ordering/: README.md  memory_acquire_release  memory_acquire_release.cpp  memory_relaxed  memory_relaxed.cpp  memory_sequential  memory_sequential.cpp
virtual_vs_crtp/: README.md  virtual_vs_crtp  virtual_vs_crtp.cpp
(+3 files in other folders)
